--- a/source/css/highlight/a11y-light.css
+++ b/source/css/highlight/a11y-light.css
@@ -15,8 +15,7 @@
  * HISTORY:
  * Date      	By	Comments
  * ----------	---	----------------------------------------------------------
- */xxxxx
-cdcdscscdscsdcscdscdsccdcdcdcdscdscdcss
+ */
 
 /* a11y-light theme */
 /* Based on the Tomorrow Night Eighties theme: https://github.com/isagalaev/highlight.js/blob/master/src/styles/tomorrow-night-eighties.css */
