--- a/source/css/style/_functions/footer.styl
+++ b/source/css/style/_functions/footer.styl
@@ -10,7 +10,7 @@
     margin-top 4rem
     margin-bottom 2rem
     text-align center
-    font-size 1.1em
+    font-size small
     font-family rubik,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,pingfang sc,noto sans cjk sc,sarasa gothic sc,microsoft yahei,sans-serif,Apple Color Emoji,Segoe UI Emoji,Varela Round
     color $color_footer_text
 
