--- a/source/css/style/_pages/post.styl
+++ b/source/css/style/_pages/post.styl
@@ -64,10 +64,10 @@
 
 .post-entry__header
 .post__header
+    border-radius $thumbnail_radius
     margin calc(var(--space) * -1) !important
     margin-bottom calc(var(--space) / 2) !important
     overflow hidden
-    border-radius $radius_main
 
     &:empty
         display none
