--- a/source/css/style/_layout/layout.styl
+++ b/source/css/style/_layout/layout.styl
@@ -4,7 +4,7 @@
     margin 0 auto
     transition background-color .6s
     padding var(--space)
-    border-radius $radius_main
+    border-radius $radius_content
     -webkit-box-shadow 1px 1px 5px 0 rgba(0,0,0,0.02), 1px 1px 15px 0 rgba(0,0,0,0.03)
     box-shadow 1px 1px 5px 0 rgba(0,0,0,0.02), 1px 1px 15px 0 rgba(0,0,0,0.03)
     -webkit-transition background-color 0.3s, -webkit-transform 0.3s, -webkit-box-shadow 0.6s
@@ -18,6 +18,11 @@
 
     &>:last-child
         margin-bottom 0
+
+    .post__header
+        border-radius: $radius_content
+        border-bottom-right-radius: 4px
+        border-bottom-left-radius: 4px
 
 .MathJax
     overflow-x auto
