目录跳转至 index.html 如果 url 是目录，则跳转至目录下 index.html ，解决七牛云 cdn 缓存问题

--- a/layout/_partial/source/header.ejs
+++ b/layout/_partial/source/header.ejs
@@ -26,4 +26,10 @@
             </div>
         <% } %>
     </div>
+    <script>
+        let u = window.location.pathname;
+        if (!u.endsWith('.html')){
+            window.location.pathname = u + 'index.html' ;
+        }
+    </script>
 </header>
