修复滚动条残留问题

--- a/source/css/style/_functions/toc.styl
+++ b/source/css/style/_functions/toc.styl
@@ -90,11 +90,10 @@
 
 @media screen and (max-width: 1080px)
     .post-side
-        width calc(100vw / 4 - 30px)
+        display none
         
         .post-side__toc
             .toc
-                width calc(100vw / 4 - 30px)
                 width 0
     
     .post__with-toc
