--- a/source/css/style/_base/_defines.styl
+++ b/source/css/style/_base/_defines.styl
@@ -33,7 +33,11 @@ $space_main = convert(hexo-config('style.space.main_space')) || 3.5rem
 $space_sm = convert(hexo-config('style.space.sm_space')) || 1.5rem
 $header_height = 60px
 
+
 $fontsize = 16px
 $code_fontsize = 14px
 $toc_fontsize = 14px
 $lineheight = 1.8
+
+$main_padding =  convert(hexo-config('style.other.main_padding')) || 12px 
+
