文章内 thumbnail 在移动端上将显示为背景图

--- a/source/css/style/_base/base.styl
+++ b/source/css/style/_base/base.styl
@@ -58,7 +58,8 @@ section
 
 .main
     margin 0 auto
-    padding 1.5vw 12px 0
+    padding 0px $main_padding 0 
+    // padding 
 
     &.tagscloud
     &.links 
