--- a/source/css/style/_functions/toc.styl
+++ b/source/css/style/_functions/toc.styl
@@ -110,6 +110,9 @@
                 display block
     
 @media screen and (max-width: 764px)
+    .content-margin
+        margin-top: calc( 30vh - 60px )
+
     .post__with-toc
         max-width var(--w)
 
