--- a/layout/_partial/post/post-content.ejs
+++ b/layout/_partial/post/post-content.ejs
@@ -1,15 +1,19 @@
 <% page.cover = false; %>
 
 
-<% show_thumbnail = (theme.meta.thumbnail.enable === true && 
+<% let show_thumbnail = (theme.meta.thumbnail.enable === true && 
 (post.thumbnail || theme.meta.post_thumbnail.default) || 
-(theme.meta.post_thumbnail.enable === true && theme.meta.post_thumbnail.default)) %>
+(theme.meta.post_thumbnail.enable === true && theme.meta.post_thumbnail.default)) ;
+console.log('boooooooooool', show_thumbnail);
+console.log('thumb post', theme.meta.post_thumbnail.default);
+%>
 
 
 <% if (show_thumbnail) { %>
 
     <div class="post-title post thumbnail_bg <% if (theme.meta.toc.enable && page.toc !== false) { %> post__with-toc <% } %> content-card" 
-    style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(<%= post.thumbnail || theme.meta.thumbnail.default || theme.mata.post_thumbnail.default %>)">
+    style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(<%= post.thumbnail || theme.meta.post_thumbnail.default || theme.meta.thumbnail.default %>)"
+    >
         <h1 class="post-title__text">
             <%= page.title || theme.meta.title %>
         </h1>
