1. 修改主页卡片字体大小，带 thumbnail 的与正常样式区分 2. 调整卡片内边距 3. 文章内部，调整 thumbnail 为固定位置背景

--- a/layout/_partial/post/post-entry.ejs
+++ b/layout/_partial/post/post-entry.ejs
@@ -1,5 +1,5 @@
 <div class="post-entry__header"><%- partial('_meta/thumbnail') %></div>
-<div class="post-entry__content">
+<div class="post-entry__content <% if (theme.meta.thumbnail.enable === true && (post.thumbnail || theme.meta.thumbnail.default)) { %> card-entry-with-thumbnail <% } %>">
     <h2 class="post-entry__title">
         <%= post.title || theme.meta.title %>
     </h2>
