--- a/layout/_partial/source/header.ejs
+++ b/layout/_partial/source/header.ejs
@@ -31,5 +31,8 @@
         if (!u.endsWith('.html')){
             window.location.pathname = u + 'index.html' ;
         }
+        // function pageChange () {
+        // }
+        // window.addEventListener("scroll" , pageChange, false);
     </script>
 </header>
