--- a/source/css/style/_base/_defines.styl
+++ b/source/css/style/_base/_defines.styl
@@ -37,7 +37,8 @@ $header_height = 60px
 $fontsize = 16px
 $code_fontsize = 14px
 $toc_fontsize = 14px
-$lineheight = 1.8
+$lineheight = 1.7
 
-$main_padding =  convert(hexo-config('style.other.main_padding')) || 12px 
+$main_padding =  convert(hexo-config('style.other.main_padding')) || 8px 
+$post_list_padding = convert(hexo-config('style.other.post_list_padding')) || 8px 
 
