--- a/source/css/style/_layout/layout.styl
+++ b/source/css/style/_layout/layout.styl
@@ -3,7 +3,7 @@
     max-width var(--content-width)
     margin 0 auto
     transition background-color .6s
-    padding var(--space)
+    padding calc(var(--space)/3 * 2)
     border-radius $radius_content
     -webkit-box-shadow 1px 1px 5px 0 rgba(0,0,0,0.02), 1px 1px 15px 0 rgba(0,0,0,0.03)
     box-shadow 1px 1px 5px 0 rgba(0,0,0,0.02), 1px 1px 15px 0 rgba(0,0,0,0.03)
