--- a/source/css/style/_pages/post.styl
+++ b/source/css/style/_pages/post.styl
@@ -4,6 +4,7 @@
     background-repeat:no-repeat;
     background-size: cover;
     background-position: center;
+    top: 0
     height: 35vh;
     display:flex;
     flex-direction: column;
@@ -20,13 +21,14 @@
         color: white  
 
     .post-meta__date
-        color: white  
+        color: white  !important
 
 
 @media screen and (max-width: 764px)
     .thumbnail_bg 
         float: top
-        position: absolute
+        // position: absolute
+        position: fixed !important
         z-index -9
         left 0
         top 0
@@ -40,28 +42,45 @@
 .post-entry
     margin-bottom var(--space)
     position relative
+    box-shadow 1px 5px 30px 0 rgba(0,0,0,.1)
+    // -webkit-box-shadow: 0 0px 3px 0px rgb(0 0 0 / 16%)
 
     &:hover
         -webkit-transform translateY(-5px)
         -ms-transform translateY(-5px)
         transform translateY(-5px)
         -webkit-box-shadow 1px 10px 30px 0 rgba(0,0,0,0.1)
-        box-shadow 1px 10px 30px 0 rgba(0,0,0,.1)
+        // box-shadow 1px 10px 30px 0 rgba(0,0,0,.1)
+        box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+
+.card-entry-with-thumbnail       
+    h2
+    p
+        margin-block-start: 0.3rem !important;
+        margin-block-end: 0 !important;
+    
+    .post-entry__title
+        font-size: 1.4rem !important
+
+    p
+        font-size: 0.9rem
+
 
 .post-entry__content
     .post-entry__title
         color var(--title-color)
         margin-top 0
         border none
-        font-size 1.5rem
+        font-size 1.6rem
         font-weight 450
-        line-height 1.125
+        line-height 1
+    
 
 .post-meta__cats
 .post-entry__tags
     display inline-block
     position relative
-    margin 1em 0 0
+    margin 0.1em 0 0
     z-index 1
 
     &:empty
@@ -100,9 +119,10 @@
 .post-entry__header
 .post__header
     border-radius $thumbnail_radius
-    margin calc(var(--space) * -1) !important
+    margin calc(var(--space) / 3 * -2) !important
     margin-bottom calc(var(--space) / 2) !important
     overflow hidden
+    // height: 30vh
 
     &:empty
         display none
@@ -112,7 +132,7 @@
         display -ms-flexbox
         display flex
         width 100%
-        padding-bottom 40%
+        padding-bottom 50%
         background-size cover
         background-repeat repeat
         background-position 50% 50%
@@ -122,6 +142,7 @@
 .post__content
     p
         line-height $lineheight
+        font-size: 1rem
 
     img
         &.inline
@@ -148,7 +169,7 @@
 
 .post-footer__meta
     font-size 14px
-    margin-top 1.5rem
+    // margin-top 0.2rem
 
     &>:last-child
         margin-bottom 0
