增加摘要显示行数配置

--- a/source/css/style/_base/_defines.styl
+++ b/source/css/style/_base/_defines.styl
@@ -41,4 +41,5 @@ $lineheight = 1.7
 
 $main_padding =  convert(hexo-config('style.other.main_padding')) || 8px 
 $post_list_padding = convert(hexo-config('style.other.post_list_padding')) || 8px 
-
+$content_show_lines = convert(hexo-config('style.other.content_show_lines')) || 8
+$content_show_lines_simple = convert(hexo-config('style.other.content_show_lines_simple')) || 8
