--- a/source/css/style/_pages/post.styl
+++ b/source/css/style/_pages/post.styl
@@ -58,6 +58,11 @@
     p
         margin-block-start: 0.3rem !important;
         margin-block-end: 0 !important;
+        display:-webkit-box;
+        overflow: hidden; 
+        text-overflow: ellipsis;
+        -webkit-box-orient:vertical; 
+        -webkit-line-clamp: $content_show_lines; 
     
     .post-entry__title
         font-size: 1.4rem !important
@@ -132,7 +137,7 @@
         display -ms-flexbox
         display flex
         width 100%
-        padding-bottom 50%
+        padding-bottom 60%
         background-size cover
         background-repeat repeat
         background-position 50% 50%
@@ -143,6 +148,10 @@
     p
         line-height $lineheight
         font-size: 1rem
+        overflow: hidden; 
+        text-overflow: ellipsis;
+        -webkit-box-orient:vertical; 
+        -webkit-line-clamp: $content_show_lines_simple; 
 
     img
         &.inline
