--- a/source/css/style/_base/_defines.styl
+++ b/source/css/style/_base/_defines.styl
@@ -7,13 +7,15 @@ $avatar_height = 96px
 
 $color_main = convert(hexo-config('style.color.main_color')) || #6200ee
 $color_dark = convert(hexo-config('style.color.main_color_dark')) || #bb86fc
-$color_title = #50596c
-$color_title_dark = rgba(252,252,252,0.9)
+$color_title = #1e1e20
+$color_title_dark = rgba(241, 232, 232, 0.9)
 $color_background = #f4f4f4
 $color_background_dark = #121212
-$color_card = #fff
+// post bacgroud color
+$color_card = rgb(255, 255, 252)
 $color_card_dark = #1e1e1e
-$color_font = #4c4d4e
+// $color_font = #4c4d4e
+$color_font = #151414
 $color_font_dark = rgba(255,255,255,0.8)
 $color_codeblock = #eeeeee
 $color_codeblock_dark = #f0f6fc26
