--- a/source/css/style/_base/markdown.styl
+++ b/source/css/style/_base/markdown.styl
@@ -357,6 +357,7 @@ overflows
 
 .post-entry__content
 .post__content
+    // margin calc(var(--space)/3 * 2)
     -webkit-text-size-adjust 100%
     -moz-text-size-adjust 100%
     -ms-text-size-adjust 100%
@@ -374,7 +375,7 @@ overflows
             text-decoration underline
 
     &>.highlight
-        margin 1rem calc(0rem - var(--space)) !important
+        margin 1rem calc(0rem - var(--space)/3 * 2) !important
         padding 0.4rem var(--space) !important
         border none !important
         border-radius 0 !important
