将折叠块和署名块宽度调节与 content 等宽

--- a/source/css/style/_pages/post.styl
+++ b/source/css/style/_pages/post.styl
@@ -224,7 +224,7 @@
 .post__license
     background-color rgb(245, 245, 245)
     word-break break-all
-    margin 3em 0 1em 0
+    margin 3em calc(var(--space)/3 * -2) 1em calc(var(--space)/3 * -2)
     padding 0.5rem 0.8rem
     border-left 4px solid rgb(244, 67, 54)
     list-style none
