--- a/source/css/style/_plugins/fold.styl
+++ b/source/css/style/_plugins/fold.styl
@@ -3,7 +3,7 @@ if hexo-config('fold.enable')
     details
         display block
         padding 16px
-        margin 20px 0
+        margin 20px calc(var(--space)/3 * -2)
         background var(--bg-content-color)
         border none 
         border-radius 4px
