--- a/source/css/style/_plugins/note.styl
+++ b/source/css/style/_plugins/note.styl
@@ -37,7 +37,7 @@ if hexo-config('note')
                 margin-bottom 0
     .post__content
         &>.blockquote-note
-            margin 1rem calc(0rem - var(--space))
+            margin 1rem calc(0rem - var(--space)/2*3)
             padding 1rem var(--space)
 
     .blockquote-note__info
